// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should List Expenses correctly 1`] = `
<div>
  <h1>
    This is Expense List
  </h1>
  <table>
    <thead>
      <tr>
        <th>
          Description
        </th>
        <th>
          Amount
        </th>
        <th>
          Created At
        </th>
      </tr>
    </thead>
    <tbody>
      <Connect(ExpenseListItem)
        amount={195}
        createdAt={0}
        description="Gum"
        id="1"
        key="1"
        note=""
      />
      <Connect(ExpenseListItem)
        amount={109500}
        createdAt={-345600000}
        description="Rent"
        id="2"
        key="2"
        note=""
      />
      <Connect(ExpenseListItem)
        amount={4500}
        createdAt={345600000}
        description="Credit Card"
        id="3"
        key="3"
        note=""
      />
    </tbody>
  </table>
</div>
`;

exports[`Should Render Expense with empty array 1`] = `
<div>
  <h1>
    This is Expense List
  </h1>
  <table>
    <thead>
      <tr>
        <th>
          Description
        </th>
        <th>
          Amount
        </th>
        <th>
          Created At
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          No Data found
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
